# QuantLab

./: .env.example  .gitattributes  .gitignore  CLAUDE.md  README.md
.github/: CODEOWNERS
.github/workflows/: deploy-forward-rates.yml  test.yml
dashboard/: app.py  requirements.txt  test_results.json
dashboard/.streamlit/: config.toml
dashboard/data/: london_borough_rents_by_bedroom.csv  london_postcode_districts.geojson
dashboard/lib/: api_client.py  cached_data.py  charts.py  ci_status.py  data.py  finance.py  house_prices.py  mermaid.py  nav.py  page_header.py  page_init.py  plotting.py  projects.py  render_admin.py  risk_colors.py  stock_inputs.py  tech_footer.py  test_tab.py
dashboard/pages/: 0_QuantLabs.py  10_Credit_Card_Calculator.py  11_Loan_Amortization.py  12_Loan_Comparison.py  13_Retirement_Calculator.py  14_Investment_Planner.py  15_Budget_Tracker.py  16_Rent_vs_Buy.py  1_Stock_Risk_Scanner.py  20_Currency_Dashboard.py  21_Stock_Tracker.py  22_Stock_Analysis.py  23_Crypto_Portfolio.py  24_Personal_Finance.py  25_ESG_Tracker.py  26_Financial_Reporting.py  2_System_Health.py  30_VaR_CVaR.py  31_Time_Series.py  32_Sentiment_Analysis.py  33_Anomaly_Detection.py  34_Loan_Default.py  35_Clustering.py  36_Portfolio_Optimization.py  37_Algo_Trading.py  38_Stock_Prediction.py  39_Market_Insights.py  40_Benchmark_Rates.py  41_Plotting_Libraries.py  42_London_House_Prices.py  50_Etymology.py  60_Big_O.py  70_Global_Contagion.py  80_InqLab.py  99_Admin.py  99_Churros.py  9_System_Health.py
dashboard/scripts/: build_benchmark_parquet.py  build_ppd_with_bedrooms.py  refresh_boe_rates.py
dashboard/static/: resume.html
dashboard/tests/: conftest.py  test_admin.py  test_algo_trading.py  test_anomaly_detection.py  test_app.py  test_benchmark_datasets.py  test_benchmark_engines.py  test_benchmark_rates.py  test_benchmark_report.py  test_benchmark_runner.py  test_bigo_algorithms.py  test_bigo_problems.py  test_bigo_report.py  test_bigo_runner.py  test_budget_tracker.py  test_churros.py  test_clustering.py  test_contagion_constants.py  test_contagion_correlations.py  test_contagion_data_quality.py  test_contagion_globe.py  test_contagion_loader.py  test_credit_card_calculator.py  test_crypto_portfolio.py  test_currency_dashboard.py  test_esg_tracker.py  test_financial_reporting.py  test_global_contagion.py  test_investment_planner.py  test_loan_amortization.py  test_loan_comparison.py  test_loan_default.py  test_london_house_prices.py  test_market_insights.py  test_personal_finance.py  test_plotting_libraries.py  test_portfolio_optimization.py  test_rent_vs_buy.py  test_rentbuy_charts.py  test_rentbuy_finance.py  (+10 more)
docs/: MAINTENANCE.md  NEW_PROJECT_TEMPLATE.md  architecture-overview.html  aws-setup-guide.md  github-oidc-setup.md  rds-admin-policy.json  streamlit-admin-setup.md
exercises/03-fastapi/: pyproject.toml
exercises/03-fastapi/src/: app.py
exercises/03-fastapi/tests/: test_app.py
exercises/04-async/: pyproject.toml
exercises/04-async/src/: async_prices.py
exercises/04-async/tests/: test_async_prices.py
exercises/05-yfinance/: pyproject.toml
exercises/05-yfinance/src/: market_data.py
exercises/05-yfinance/tests/: test_market_data.py
exercises/08-postgres-sqlalchemy/: docker-compose.yml  pyproject.toml
exercises/08-postgres-sqlalchemy/src/: db.py  models.py
exercises/08-postgres-sqlalchemy/tests/: test_db.py
exercises/09-aws-fundamentals/: pyproject.toml
exercises/09-aws-fundamentals/src/: treasury_yields.py
exercises/09-aws-fundamentals/tests/: test_treasury_yields.py
exercises/10-s3-data-ingestion/: pyproject.toml
exercises/10-s3-data-ingestion/src/: s3_ingestion.py
exercises/10-s3-data-ingestion/tests/: test_s3_ingestion.py
exercises/11-rds-postgresql/: pyproject.toml
exercises/11-rds-postgresql/src/yield_store/: __init__.py  db.py  models.py
exercises/11-rds-postgresql/tests/: test_db.py
exercises/13-cicd-github-actions/: .gitignore  pyproject.toml
exercises/13-cicd-github-actions/src/: forward_rates.py  handler.py
exercises/13-cicd-github-actions/tests/: test_forward_rates.py  test_handler.py
exercises/14-terraform-curve-fitting/: .gitignore  README.md  pyproject.toml
exercises/14-terraform-curve-fitting/src/: curve_fitting.py  handler.py
exercises/14-terraform-curve-fitting/terraform/: main.tf  outputs.tf  variables.tf
exercises/14-terraform-curve-fitting/tests/: test_curve_fitting.py  test_handler.py
exercises/17-elasticache-redis/: pyproject.toml
exercises/17-elasticache-redis/src/: cache.py
exercises/17-elasticache-redis/tests/: test_cache.py
exercises/18-terraform-advanced/: pyproject.toml
exercises/18-terraform-advanced/src/: default_probabilities.py
exercises/18-terraform-advanced/tests/: test_default_probabilities.py
exercises/19-cloudwatch-oas/: pyproject.toml
exercises/19-cloudwatch-oas/src/: oas.py
exercises/19-cloudwatch-oas/tests/: test_oas.py
scripts/: build_london_ppd.py  fetch_contagion_data.py  rds.py
(+88 files in other folders)
