[project]
name = "fastapi-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "httpx>=0.27.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
