[project]
name = "async-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["aiohttp>=3.9.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.24.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["async_prices"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
