[project]
name = "aws-fundamentals-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fredapi>=0.5.2",
    "numpy>=1.26.0",
    "boto3>=1.35.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "moto[s3]>=5.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["treasury_yields"]

[tool.pytest.ini_options]
testpaths = ["tests"]
