[project]
name = "s3-data-ingestion-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "fredapi>=0.5.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "moto[s3]>=5.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["s3_ingestion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
