[project]
name = "cicd-github-actions-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["forward_rates", "handler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
