[project]
name = "terraform-curve-fitting-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.14.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["curve_fitting", "handler"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
