[project]
name = "elasticache-redis-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["redis>=5.0.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "fakeredis>=2.21.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["cache"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
