[project]
name = "terraform-advanced-exercise"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["numpy>=1.26.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["default_probabilities"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
